@@ -293,9 +293,9 @@ public class MoneyCommand implements ICommand {
 
 					if (BagOfGoldCompat.isSupported()) {
 						plugin.getMessages().debug("BagOfGold supported, using depositPlayer");
-						if (offlinePlayer.isOnline() && ((Player) offlinePlayer).getGameMode() != GameMode.SURVIVAL)
-							BagOfGold.getAPI().getEconomyManager().depositPlayer(offlinePlayer, 0);
-						else
+						//if (offlinePlayer.isOnline() && ((Player) offlinePlayer).getGameMode() != GameMode.SURVIVAL)
+						//	BagOfGold.getAPI().getEconomyManager().depositPlayer(offlinePlayer, 0);
+						//else
 							BagOfGold.getAPI().getEconomyManager().depositPlayer(offlinePlayer, amount);
 					} else {
 						if (plugin.getConfigManager().dropMoneyOnGroundUseAsCurrency) {
@@ -365,9 +365,9 @@ public class MoneyCommand implements ICommand {
 					if (BagOfGoldCompat.isSupported()) {
 						plugin.getMessages().debug("BagOfGold supported, using withdrawPlayer");
 
-						if (offlinePlayer.isOnline() && ((Player) offlinePlayer).getGameMode() != GameMode.SURVIVAL)
-							BagOfGold.getAPI().getEconomyManager().withdrawPlayer(offlinePlayer, 0);
-						else
+						//if (offlinePlayer.isOnline() && ((Player) offlinePlayer).getGameMode() != GameMode.SURVIVAL)
+						//	BagOfGold.getAPI().getEconomyManager().withdrawPlayer(offlinePlayer, 0);
+						//else
 							BagOfGold.getAPI().getEconomyManager().withdrawPlayer(offlinePlayer, rest);
 
 					} else if (plugin.getConfigManager().dropMoneyOnGroundUseAsCurrency) {
