@@ -1,6 +1,7 @@
 V5.6.5
 * Added Support for EliteMobs
-* Removed MCstats.org Metrics completely 
+* Removed MCstats.org Metrics completely
+* BagOfGold can now be used in both Survival and Creative mode. PerWorldInventory or similar plugin is strongly recommended. 
 V5.6.4
 * Added test for Worldguard 6.2+ (MobHunting only support WG 6.2 and newer)
 * Fixed MobArena bug
